Bug 1043022 - Back out bug 1016481 for making it hard to click things in the browser. r=me